# iGlobOpt

./: .gitignore  .project  README.md
CudaInfo/: Makefile
CudaInfo/src/: kernel.cpp
experiments/: Makefile  README.md
experiments/balancing/: Makefile  balancingTime  transferDataToDeviceTest.txt
experiments/comparison/iGlobOpt/: CMakeLists.txt  dropped
experiments/comparison/iGlobOpt/include/: iGlobOpt.h  testFuncWithLib.h
experiments/comparison/iGlobOpt/src/: CPUGlobOptBFSWithMmapAndOMP.cpp
experiments/data/: cpuDim2.txt  cpuDim3.txt
experiments/iGlobOpt/: CMakeLists.txt
experiments/iGlobOptCudaDFS/: .cproject  Makefile  testGPU10  testGPU11  testGPU12  testGPU14  testGPU16  testGPU17  testGPU19  testGPU2  testGPU4  testGPU5  testGPU6  testGPU8
experiments/numberOfBoxes/: droppedBoxesGPU
experiments/src/: kernel.cpp  kernel.h
iClobOptCuda/: .gitignore  Makefile
iClobOptCuda/src/: kernel.cu
iGlobOpt/: .cproject  .gitignore  .project  CMakeLists.txt  Makefile  iGlobOpt.cpp
iGlobOpt/include/: iGlobOpt.h  testFuncWithLib.h  testFuncWithOwnImpl.h
iGlobOpt/src/: CPUGlobOptBFS.cpp  CPUGlobOptBFSWithMmap.cpp  CPUGlobOptBFSWithMmapAndOMP.cpp  CPUGlobOptBFSWithOMP.cpp  iGlobOpt.cpp  testFuncWithLib.cpp
iGlobOptCuda/: Makefile
iGlobOptCuda/include/: CUDAGlobalOptimization.h  interval.h
iGlobOptCuda/src/: kernel.cpp
iGlobOptCudaDFS/: Makefile
iGlobOptCudaDFS/include/: CUDAGlobalOptimization.h  data_params.h  interval.h
iGlobOptCudaDFS/src/: CPUGlobalOptimization.cpp  kernel.cpp
iGlobOptCudaDeep/: Makefile
iGlobOptCudaDeep/include/: CUDAGlobalOptimization.h  header.h  interval.h
iGlobOptCudaDeep/src/: CPUGlobalOptimization.cpp  kernel.cpp
(+30 files in other folders)
